# clawtotalk

./: .env.example  .gitignore  ANDROID_OPTIMIZATION.md  ARCHITECTURE.md  BUILD.md  Cargo.toml  DOCUMENTATION_INDEX.md  Dioxus.toml  FINAL_VERIFICATION_REPORT.md  IOS_OPTIMIZATION.md  LOCAL_TESTING_GUIDE.md  MACOS_OPTIMIZATION.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  TASK_10.1_SUMMARY.md  TASK_10.2_SUMMARY.md  TASK_10.3_SUMMARY.md  TASK_10.4_SUMMARY.md  WINDOWS_OPTIMIZATION.md  build.rs  package-lock.json  package.json  quick_test.sh  server.js
.cargo/: config.toml
.kiro/specs/dioxus-voice-assistant/: design.md  requirements.md  tasks.md
android/: AndroidManifest.xml  AudioRecordingService.java  MainActivity.java  README.md  build_android.sh  cargo-apk-config.toml
ios/: ICON_PLACEHOLDER.txt  Info.plist  QUICK_START.md  README.md  VERIFICATION_CHECKLIST.md  build_ios.sh
macos/: ICON_PLACEHOLDER.txt  Info.plist  README.md  build_app_bundle.sh  build_universal.sh  entitlements.plist
public/: index.html  manifest.json
src/: api.rs  audio.rs  compression.rs  connection.rs  error.rs  error_handler.rs  lib.rs  main.rs  memory.rs  models.rs  performance.rs  recording.rs  state.rs  vad.rs
src/platform/: android.rs  ios.rs  macos.rs  mod.rs  windows.rs
src/ui/: app.rs  connection_status.rs  conversation_history.rs  error_notification.rs  mod.rs  recording_button.rs  settings_screen.rs
tests/: integration_tests.rs  performance_proptest.rs  proptest.proptest-regressions  proptest.rs
windows/: ICON_PLACEHOLDER.txt  README.md  app.manifest  resource.rc
