[package]
name = "dioxus-voice-assistant"
version = "0.1.0"
edition = "2021"
authors = ["Squidcode"]
license = "MIT"
description = "Cross-platform voice assistant built with Dioxus"

[dependencies]
# Dioxus 0.7 core dependencies
dioxus = { version = "0.7", features = ["desktop", "mobile", "web"] }
dioxus-signals = "0.7"

# Audio processing
cpal = "0.15"
hound = "3.5"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1.6"
tokio-test = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk = "0.8"
ndk-glue = "0.7"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[[bin]]
name = "dioxus-voice-assistant"
path = "src/main.rs"

[lib]
name = "dioxus_voice_assistant"
path = "src/lib.rs"
